Fix: Theatre mode chat containers overlapping with chat container

--- a/assets/SCSS/platforms/kick/_chat.scss
+++ b/assets/SCSS/platforms/kick/_chat.scss
@@ -95,10 +95,18 @@
 	}
 }
 
-.ntv__kick__page-vod {
-	#main-view .chat-container,
-	#theaterModeChatHolder {
-		width: auto;
+.ntv__kick__page {
+	&-live-stream {
+		#theaterModeVideoHolder + .ntv__kick__theater-mode__chat-container {
+			display: none;
+		}
+	}
+
+	&-vod {
+		#main-view .chat-container,
+		#theaterModeChatHolder {
+			width: auto;
+		}
 	}
 }
 
